--- a/lesson-29-asynchrony/task1/index.html
+++ b/lesson-29-asynchrony/task1/index.html
@@ -20,6 +20,9 @@
   <div class="page">
     <span class="image-size"></span>
   </div>
+  <div class="btn-click">
+    <button id="button" class="btn">Click me</button>
+  </div>
 </section>
 
     <script src="script.js"></script>
