--- a/lesson-27-browser-storage/task3/index.html
+++ b/lesson-27-browser-storage/task3/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <title>JavaScript - Todo-list</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
     <h2>Урок-27: Browser storage в JavaScript. sessionStorage та localStorage. Завдання №3.</h2>
 </div>
 
-<section>
+
     <h1 class="title">Todo List</h1>
     <main class="todo-list">
         <div class="actions">
@@ -23,7 +23,7 @@
         </div>
         <ul class="list"></ul>
     </main>
-</section>
+
 
 <!--<script src="script.js"></script>-->
 <script src="src/scripts/index.js" type="module"></script>
